# ScreenListenBravo

./: README.md  dockerfile  main.py  pyproject.toml
data/: test1.csv  test_data.csv
services/: db.py  utils.py
